# File_sharing_system

./: CMakeLists.txt  README.md
BackTracking/: backtracking.md  main.cpp  output  permutation.cpp
divideAndConquer/: mergeSort.cpp  output  quickSort.cpp  readme.md
include/: DatabaseManager.h  FileManager.h  UserManager.h
recursion/: binarySearch.cpp  climbStairs.cpp  cutSegments.cpp  factorial.cpp  fibonacci.cpp  findArray.cpp  isSortedArray.cpp  keyInStr.cpp  maxArray.cpp  output  printArray.cpp  printDigits.cpp  readme.md  reverse_count.cpp  subsequenceStrings.cpp  sumNonadjacent.cpp  targetMinimumelements.cpp
src/: DatabaseManager.cpp  FileManager.cpp  UserManager.cpp  main.cpp
